Fix view more position on mobile

--- a/styleguide/source/assets/scss/02-molecules/_upcoming-event.scss
+++ b/styleguide/source/assets/scss/02-molecules/_upcoming-event.scss
@@ -77,20 +77,20 @@
   }
 
   &__view-all-link {
-    @include gutter($margin-right-full...);
     @include font-size($small-font-sizes);
     float: right;
 
     @include breakpoint($bp-small) {
       position: absolute;
       top: 10px;
-      right: 20px;
+      right: 0;
     }
 
     @include breakpoint($bp-med) {
       font-size: .778em;
       line-height: 1.571em;
       top: 45px;
+      right: 20px;
     }
   }
 }
